--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,14 @@
     <meta name="description" content=""/>
     <meta name="viewport" content="width=device-width"/>
     <title>Menottes</title>
-    <link rel="shortcut icon" type="image/png" href="favicon.ico">
+    <link rel="icon" type="image/png" href="images/icon.png">
     <link rel="stylesheet" media="screen" href="stylesheets/reset.css">
     <link rel="stylesheet" media="screen" href="stylesheets/index.css">
+    <link rel="stylesheet" media="screen" href="stylesheets/login.css">
   </head>
   <body ng-app="app">
 
-    <div class="main" ng-view></div>
+    <div id="container" ng-view></div>
 
     <script type="text/javascript" src="vendor/angular.min.js"></script>
     <script type="text/javascript" src="javascripts/app.js"></script>
