--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon.ico">
     <link rel="stylesheet" media="screen" href="stylesheets/reset.css">
     <link rel="stylesheet" media="screen" href="stylesheets/index.css">
+	<link rel="stylesheet" media="screen" href="stylesheets/logged.css">
   </head>
   <body ng-app="app">
 
