--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="vendor/angular.min.js"></script>
     <script type="text/javascript" src="javascripts/app.js"></script>
     <script type="text/javascript" src="javascripts/services/network.js"></script>
+    <script type="text/javascript" src="javascripts/directives/drag.js"></script>
     <script type="text/javascript" src="javascripts/controllers/MainController.js"></script>
     <script type="text/javascript" src="javascripts/controllers/LoginController.js"></script>
     <script type="text/javascript" src="javascripts/controllers/LoggedController.js"></script>
