--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <script type="text/javascript" src="javascripts/controllers/MainController.js"></script>
     <script type="text/javascript" src="javascripts/controllers/LoginController.js"></script>
     <script type="text/javascript" src="javascripts/controllers/LoggedController.js"></script>
+    <script type="text/javascript" src="javascripts/controllers/PopupController.js"></script>
 
   </body>
 </html>
