--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" media="screen" href="stylesheets/index.css">
 	<link rel="stylesheet" media="screen" href="stylesheets/logged.css">
     <link rel="stylesheet" media="screen" href="stylesheets/login.css">
+	<link rel="stylesheet" media="screen" href="stylesheets/popupNewTicket.css">
   </head>
   <body ng-app="app">
 
