Création plannif (contrôleur et vue)

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     <script type="text/javascript" src="javascripts/controllers/LoginController.js"></script>
     <script type="text/javascript" src="javascripts/controllers/LoggedController.js"></script>
     <script type="text/javascript" src="javascripts/controllers/PopupController.js"></script>
+    <script type="text/javascript" src="javascripts/controllers/PlanifController.js"></script>
 
   </body>
 </html>
