--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" media="screen" href="stylesheets/index.css">
 	<link rel="stylesheet" media="screen" href="stylesheets/logged.css">
     <link rel="stylesheet" media="screen" href="stylesheets/login.css">
-	<link rel="stylesheet" media="screen" href="stylesheets/popupNewTicket.css">
+    <link rel="stylesheet" media="screen" href="stylesheets/popupNewTicket.css">
+    <link rel="stylesheet" media="screen" href="stylesheets/planif.css">
   </head>
   <body ng-app="app">
 
