--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="javascripts/controllers/LoggedController.js"></script>
     <script type="text/javascript" src="javascripts/controllers/PopupController.js"></script>
     <script type="text/javascript" src="javascripts/controllers/PlanifController.js"></script>
+    <script type="text/javascript" src="javascripts/controllers/UserLoginController.js"></script>
 
   </body>
 </html>
