--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
   <body ng-app="app">
 
     <div id="container" ng-view></div>
+    <!--De Laurent à lui-même : Utiliser <ng-view></ng-view> directement pour le pb des conteneurs-->
     
     <script type="text/javascript" src="vendor/angular.min.js"></script>
     <script type="text/javascript" src="javascripts/app.js"></script>
