--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   </head>
   <body ng-app="app">
 
-    <div id="container" ng-view></div>
+    <ng-view></ng-view>
     <!--De Laurent à lui-même : Utiliser <ng-view></ng-view> directement pour le pb des conteneurs-->
     
     <script type="text/javascript" src="vendor/angular.min.js"></script>
