lien page dislayticket

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
     <script type="text/javascript" src="javascripts/controllers/PlanifController.js"></script>
     <script type="text/javascript" src="javascripts/controllers/UserLoginController.js"></script>
     <script type="text/javascript" src="javascripts/controllers/ChoiceController.js"></script>
+    <script type="text/javascript" src="javascripts/controllers/displayTicketController.js"></script>
 
   </body>
 </html>
