--- a/public/index.html
+++ b/public/index.html
@@ -18,16 +18,18 @@
     <link rel="stylesheet" media="screen" href="stylesheets/popupNewTicket.css">
     <link rel="stylesheet" media="screen" href="stylesheets/planif.css">
     <link rel="stylesheet" media="screen" href="stylesheets/userLogin.css">
+    <link rel="stylesheet" media="screen" href="stylesheets/datePicker.css">
   </head>
   <body ng-app="app">
 
     <ng-view></ng-view>
     <!--De Laurent à lui-même : Utiliser <ng-view></ng-view> directement pour le pb des conteneurs-->
-    
+    <script type="text/javascript" src="vendor/moment.min.js"></script>
     <script type="text/javascript" src="vendor/angular.min.js"></script>
     <script type="text/javascript" src="javascripts/app.js"></script>
     <script type="text/javascript" src="javascripts/services/network.js"></script>
     <script type="text/javascript" src="javascripts/directives/drag.js"></script>
+    <script type="text/javascript" src="javascripts/directives/DatePicker.js"></script>
     <script type="text/javascript" src="javascripts/controllers/MainController.js"></script>
     <script type="text/javascript" src="javascripts/controllers/LoginController.js"></script>
     <script type="text/javascript" src="javascripts/controllers/LoggedController.js"></script>
