--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" media="screen" href="stylesheets/popupNewTicket.css">
     <link rel="stylesheet" media="screen" href="stylesheets/planif.css">
     <link rel="stylesheet" media="screen" href="stylesheets/userLogin.css">
+    <link rel="stylesheet" media="screen" href="stylesheets/ticket.css">
   </head>
   <body ng-app="app">
 
