--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" media="screen" href="stylesheets/userLogin.css">
     <link rel="stylesheet" media="screen" href="stylesheets/ticket.css">
     <link rel="stylesheet" media="screen" href="stylesheets/datePicker.css">
+    <link rel="stylesheet" media="screen" href="stylesheets/report.css">
   </head>
   <body ng-app="app">
 
@@ -41,13 +42,13 @@
     <script type="text/javascript" src="javascripts/controllers/UserLoginController.js"></script>
     <script type="text/javascript" src="javascripts/controllers/PollController.js"></script>
     <script type="text/javascript" src="javascripts/controllers/NewPollController.js"></script>
-    <script type="text/javascript" src="javascripts/controllers/displayTicketController.js"></script>
+    <script type="text/javascript" src="javascripts/controllers/ReportController.js"></script>
 
 
     <script type="text/javascript" src="vendor/jspdf/jspdf.js"></script>
     <script type="text/javascript" src="vendor/jspdf/libs/Deflate/adler32cs.js"></script>
-    <script type="text/javascript" src="vendor/jspdf/libs/FileSaver.js/FileSaver.js"></script>
-    <script type="text/javascript" src="vendor/jspdf/libs/Blob.js/BlobBuilder.js"></script>
+    <script type="text/javascript" src="vendor/jspdf/libs/FileSaver/FileSaver.js"></script>
+    <script type="text/javascript" src="vendor/jspdf/libs/Blob/Blob.js"></script>
     <script type="text/javascript" src="vendor/jspdf/jspdf.plugin.addimage.js"></script>
     <script type="text/javascript" src="vendor/jspdf/jspdf.plugin.standard_fonts_metrics.js"></script>
     <script type="text/javascript" src="vendor/jspdf/jspdf.plugin.split_text_to_size.js"></script>
